--- a/app/Resources/views/gallery/index.html.twig
+++ b/app/Resources/views/gallery/index.html.twig
@@ -6,7 +6,7 @@
         {% for image in images %}
             <div class="col-sm-6 col-md-4">
                 <a href="#" class="thumbnail">
-                    <img src="/images/{{ image }}" alt="..." />
+                    <img src="/wallpaper/web/images/{{ image }}" alt="..." />
                 </a>
             </div>
         {% endfor %}
